update: 读取词库列表